deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rootup
  namespace: pz

spec:
  ports:
    - name: rails
      port: 80
      targetPort: rails

  selector:
    app: rootup
