deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rootup
  namespace: pz
spec:
  rules:
    - host: rootup.isupinthe.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rootup
                port:
                  name: rails
